# lqxp-client

./: .gitignore  .gitmodules  README.md  flake.nix  package-lock.json  package.json  shell.nix
.github/workflows/: build-and-release.yml  update-npm-deps-hash.yml
docs/: tauri-ios.md
nix/: qxchat.nix
scripts/: build-android.sh  bump-version.py  ios-build.sh  ios-dev.sh
src/: main.ts  tauri.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
