[package]
name = "lqxp-client"
version = "1.0.0"
description = "LQXP Chat Client"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lqxp_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.0", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = ["custom-protocol"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = "2.0.2"
